--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ solution_data
 src/particle_filter_sol.cpp
 src/solutions
 # particle_filter.cpp
+/ide_profiles/VisualStudio/CarND-Kidnapped-Vehicle-Project/.vs/CarND-Kidnapped-Vehicle-Project/v15
+/ide_profiles/VisualStudio/CarND-Kidnapped-Vehicle-Project/Debug
